--- a/InspiringIPT/InspiringIPT/Views/PotencialAluno/EditarAluno.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/PotencialAluno/EditarAluno.cshtml
@@ -9,7 +9,7 @@
         @using (Html.BeginForm("Edit", "PotencialAluno", FormMethod.Get))
         {
             <div class="col-md-offset-4 col-md-10">
-                <p style="font-size:medium; font-family:Arial">Introduzir o Código: <input type="text" name="codigoAluno" style="border-color:aquamarine;"/></p> @*@Html.Editor("CodigoAluno")*@
+                <p style="font-size:medium; font-family:Arial">Introduzir o Código: <input type="text" name="codigoAluno" style="border-color:aquamarine;" size="200"/></p> @*@Html.Editor("CodigoAluno")*@
                 <input type="submit" value="Submeter o Código" class="btn btn-success" style="width:145px;height:40px; text-align:center" />
             </div>
         }
