Controllers: atualização no PotencialAlunoController - método edit
Views: atualização na view para PotencialAluno

--- a/InspiringIPT/InspiringIPT/Views/PotencialAluno/ConfirmaAluno.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/PotencialAluno/ConfirmaAluno.cshtml
@@ -6,12 +6,13 @@
 
 <div class="row" style="border:inherit;">
     <div class="col-sm-14" style="background-color:antiquewhite;text-align:center; border:double;">
-        <h2 class="page-header"><small> Confirmação de Registo de Potencial Aluno <span class="glyphicon glyphicon-user"></span></small></h2>
+        <h2 class="page-header"><small> Confirmação de Registo do Potencial Aluno <span class="glyphicon glyphicon-user"></span></small></h2>
     </div>
 
     <h4>Obrigado <b>@Model.NomeCompleto</b> pelo teu registo.</h4>
-    <h4>Por favor, guarda este código: <b><span style="color:red;">@Model.CodigoIdentificacao</span></b>, <br />pois só com ele poderás aceder aos teus dados e corrigi-los.</h4>
+    <h4>Por favor, guarda este código: <b><span style="color:red; border:ridge">@Model.CodigoIdentificacao</span></b>, <br />pois só com ele poderás aceder aos teus dados e corrigi-los.</h4>
     <br />
+
     Os dados que submeteste foram:<br />
 
     <div class="col-sm-14" style="background-color:lavender">
