--- a/InspiringIPT/InspiringIPT/Views/Home/Index.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
     }
 
     <!-- Indicators -->
-    <ol class="carousel-indicators">
+    <ol class="carousel-indicators hidden-xs">
         <li data-target="#entrada" data-slide-to="0" class="active"></li>
         <li data-target="#entrada" data-slide-to="1"></li>
         <li data-target="#entrada" data-slide-to="2"></li>
@@ -36,31 +36,31 @@
     <br />
     <div class="carousel-inner" role="listbox" />
     <div class="item active">
-        <img src="~/Imags/banner/banner_7_.jpg" alt="Chania" />
+        <img class="img-responsive img-full" src="~/Imags/banner/banner_7_.jpg" alt="Chania" />
         <div class="carousel-caption">
         </div>
     </div>
 
     <div class="item">
-        <img src="~/Imags/banner/banner_4.jpg" alt="Chania" />
+        <img class="img-responsive img-full"  src="~/Imags/banner/banner_4.jpg" alt="Chania" />
         <div class="carousel-caption">
         </div>
     </div>
 
     <div class="item">
-        <img src="~/Imags/banner/banner_5.jpg" alt="Chania" />
+        <img class="img-responsive img-full"  src="~/Imags/banner/banner_5.jpg" alt="Chania" />
         <div class="carousel-caption">
         </div>
     </div>
 
     <div class="item">
-        <img src="~/Imags/banner/banner_1.jpg" alt="Chania" />
+        <img class="img-responsive img-full" src="~/Imags/banner/banner_1.jpg" alt="Chania" />
         <div class="carousel-caption">
         </div>
     </div>
 
     <div class="item">
-        <img src="~/Imags/banner/banner_6.jpg" alt="Chania" />
+        <img class="img-responsive img-full" src="~/Imags/banner/banner_6.jpg" alt="Chania" />
         <div class="carousel-caption">
         </div>
     </div>
@@ -382,3 +382,13 @@
     </div>
     @* fim slide Alojamento*@
 </div>
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+<!-- Script to Activate the Carousel -->
+<script>
+    $('.carousel').carousel({
+        interval: 5000 //changes the speed
+    })
+</script>
